@@ -220,3 +220,9 @@ The following tree management methods are available:
 
   The given ``instance`` will be modified to reflect its new tree state
   in the database.
+
+* ``move_within_tree(instance, parent)`` -- moves a ``Model`` instance
+  to a different parent within its current tree.
+
+  The given ``instance`` will be modified to reflect its new tree state
+  in the database.
